src/main/java/com/akos/language/OrbbasicParser.java
// Generated from D:/Ákos/Dropbox/bcpraca3/src/main/java/com/akos/language\Orbbasic.g4 by ANTLR 4.5.1
package com.akos.language;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OrbbasicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GT=1, LT=2, EQ=3, NOT=4, AND=5, OR=6, TIMES=7, DIV=8, MOD=9, PLUS=10, 
		MINUS=11, BINSHL=12, BINSHR=13, BINAND=14, BINOR=15, SQRT=16, RND=17, 
		ABS=18, IF=19, THEN=20, ELSE=21, FOR=22, TO=23, STEP=24, NEXT=25, GOTO=26, 
		GOSUB=27, ON=28, COMMA=29, QMARK=30, LPAREN=31, RPAREN=32, PRINT=33, INPUT=34, 
		DELAY=35, END=36, RGB=37, LEDC=38, BACKLED=39, RANDOM=40, GOROLL=41, HEADING=42, 
		RAW=43, LOCATE=44, BASFLG=45, DATA=46, RSTR=47, READ=48, TRON=49, TROFF=50, 
		RESET=51, SLEEP=52, MACRUN=53, MACKILL=54, MACSTAT=55, SYSVARNAME=56, 
		VARLETTER=57, LISTLETTER=58, COMMENT=59, STRINGLITERAL=60, NUMBER=61, 
		WS=62;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_linenumber = 2, RULE_statement = 3, 
		RULE_printstmt = 4, RULE_printlist = 5, RULE_conditionalstmt = 6, RULE_forstmt = 7, 
		RULE_nextstmt = 8, RULE_branchstmt = 9, RULE_idxbranchstmt = 10, RULE_input = 11, 
		RULE_delay = 12, RULE_end = 13, RULE_rgb = 14, RULE_ledc = 15, RULE_backled = 16, 
		RULE_random = 17, RULE_goroll = 18, RULE_heading = 19, RULE_raw = 20, 
		RULE_locate = 21, RULE_basflg = 22, RULE_data = 23, RULE_rstr = 24, RULE_read = 25, 
		RULE_tron = 26, RULE_troff = 27, RULE_reset_ = 28, RULE_sleep = 29, RULE_macrun = 30, 
		RULE_mackill = 31, RULE_macstat = 32, RULE_vardecl = 33, RULE_varname = 34, 
		RULE_varassign = 35, RULE_neq = 36, RULE_number = 37, RULE_func = 38, 
		RULE_sqrtfunc = 39, RULE_rndfunc = 40, RULE_absfunc = 41, RULE_signExpr = 42, 
		RULE_multExpr = 43, RULE_addExpr = 44, RULE_relExpr = 45, RULE_expression = 46;
	public static final String[] ruleNames = {
		"prog", "line", "linenumber", "statement", "printstmt", "printlist", "conditionalstmt", 
		"forstmt", "nextstmt", "branchstmt", "idxbranchstmt", "input", "delay", 
		"end", "rgb", "ledc", "backled", "random", "goroll", "heading", "raw", 
		"locate", "basflg", "data", "rstr", "read", "tron", "troff", "reset_", 
		"sleep", "macrun", "mackill", "macstat", "vardecl", "varname", "varassign", 
		"neq", "number", "func", "sqrtfunc", "rndfunc", "absfunc", "signExpr", 
		"multExpr", "addExpr", "relExpr", "expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'>'", "'<'", "'='", "'!'", "'and'", "'or'", "'*'", "'/'", "'%'", 
		"'+'", "'-'", "'{'", "'}'", "'&'", "'|'", "'sqrt'", "'rnd'", "'abs'", 
		"'if'", "'then'", "'else'", "'for'", "'to'", "'step'", "'next'", "'goto'", 
		"'gosub'", "'on'", "','", "'?'", "'('", "')'", "'print'", "'input'", "'delay'", 
		"'end'", "'RGB'", "'LEDC'", "'backLED'", "'random'", "'goroll'", "'heading'", 
		"'raw'", "'locate'", "'x'", "'data'", "'rstr'", "'read'", "'tron'", "'troff'", 
		"'reset'", "'sleep'", "'macrun'", "'mackill'", "'macstat'", null, null, 
		"'Z'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "GT", "LT", "EQ", "NOT", "AND", "OR", "TIMES", "DIV", "MOD", "PLUS", 
		"MINUS", "BINSHL", "BINSHR", "BINAND", "BINOR", "SQRT", "RND", "ABS", 
		"IF", "THEN", "ELSE", "FOR", "TO", "STEP", "NEXT", "GOTO", "GOSUB", "ON", 
		"COMMA", "QMARK", "LPAREN", "RPAREN", "PRINT", "INPUT", "DELAY", "END", 
		"RGB", "LEDC", "BACKLED", "RANDOM", "GOROLL", "HEADING", "RAW", "LOCATE", 
		"BASFLG", "DATA", "RSTR", "READ", "TRON", "TROFF", "RESET", "SLEEP", "MACRUN", 
		"MACKILL", "MACSTAT", "SYSVARNAME", "VARLETTER", "LISTLETTER", "COMMENT", 
		"STRINGLITERAL", "NUMBER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Orbbasic.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OrbbasicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(OrbbasicParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OrbbasicVisitor ) return ((OrbbasicVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(94);
				line();
				}
				}
				setState(97); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMMENT || _la==NUMBER );
			setState(99);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public LinenumberContext linenumber() {
			return getRuleContext(LinenumberContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(OrbbasicParser.COMMENT, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OrbbasicVisitor ) return ((OrbbasicVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(105);
			switch (_input.LA(1)) {
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(101);
				linenumber();
				setState(102);
				statement();
				}
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinenumberContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(OrbbasicParser.NUMBER, 0); }
		public LinenumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linenumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).enterLinenumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).exitLinenumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OrbbasicVisitor ) return ((OrbbasicVisitor<? extends T>)visitor).visitLinenumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinenumberContext linenumber() throws RecognitionException {
		LinenumberContext _localctx = new LinenumberContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_linenumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public PrintstmtContext printstmt() {
			return getRuleContext(PrintstmtContext.class,0);
		}
		public ConditionalstmtContext conditionalstmt() {
			return getRuleContext(ConditionalstmtContext.class,0);
		}
		public ForstmtContext forstmt() {
			return getRuleContext(ForstmtContext.class,0);
		}
		public NextstmtContext nextstmt() {
			return getRuleContext(NextstmtContext.class,0);
		}
		public BranchstmtContext branchstmt() {
			return getRuleContext(BranchstmtContext.class,0);
		}
		public IdxbranchstmtContext idxbranchstmt() {
			return getRuleContext(IdxbranchstmtContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public DelayContext delay() {
			return getRuleContext(DelayContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public RgbContext rgb() {
			return getRuleContext(RgbContext.class,0);
		}
		public LedcContext ledc() {
			return getRuleContext(LedcContext.class,0);
		}
		public BackledContext backled() {
			return getRuleContext(BackledContext.class,0);
		}
		public RandomContext random() {
			return getRuleContext(RandomContext.class,0);
		}
		public GorollContext goroll() {
			return getRuleContext(GorollContext.class,0);
		}
		public HeadingContext heading() {
			return getRuleContext(HeadingContext.class,0);
		}
		public RawContext raw() {
			return getRuleContext(RawContext.class,0);
		}
		public LocateContext locate() {
			return getRuleContext(LocateContext.class,0);
		}
		public BasflgContext basflg() {
			return getRuleContext(BasflgContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public RstrContext rstr() {
			return getRuleContext(RstrContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public TronContext tron() {
			return getRuleContext(TronContext.class,0);
		}
		public TroffContext troff() {
			return getRuleContext(TroffContext.class,0);
		}
		public Reset_Context reset_() {
			return getRuleContext(Reset_Context.class,0);
		}
		public SleepContext sleep() {
			return getRuleContext(SleepContext.class,0);
		}
		public MacrunContext macrun() {
			return getRuleContext(MacrunContext.class,0);
		}
		public MackillContext mackill() {
			return getRuleContext(MackillContext.class,0);
		}
		public MacstatContext macstat() {
			return getRuleContext(MacstatContext.class,0);
		}
		public VarassignContext varassign() {
			return getRuleContext(VarassignContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OrbbasicVisitor ) return ((OrbbasicVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(138);
			switch (_input.LA(1)) {
			case QMARK:
			case PRINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				printstmt();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				conditionalstmt();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				forstmt();
				}
				break;
			case NEXT:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				nextstmt();
				}
				break;
			case GOTO:
			case GOSUB:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				branchstmt();
				}
				break;
			case ON:
				enterOuterAlt(_localctx, 6);
				{
				setState(114);
				idxbranchstmt();
				}
				break;
			case INPUT:
				enterOuterAlt(_localctx, 7);
				{
				setState(115);
				input();
				}
				break;
			case DELAY:
				enterOuterAlt(_localctx, 8);
				{
				setState(116);
				delay();
				}
				break;
			case END:
				enterOuterAlt(_localctx, 9);
				{
				setState(117);
				end();
				}
				break;
			case RGB:
				enterOuterAlt(_localctx, 10);
				{
				setState(118);
				rgb();
				}
				break;
			case LEDC:
				enterOuterAlt(_localctx, 11);
				{
				setState(119);
				ledc();
				}
				break;
			case BACKLED:
				enterOuterAlt(_localctx, 12);
				{
				setState(120);
				backled();
				}
				break;
			case RANDOM:
				enterOuterAlt(_localctx, 13);
				{
				setState(121);
				random();
				}
				break;
			case GOROLL:
				enterOuterAlt(_localctx, 14);
				{
				setState(122);
				goroll();
				}
				break;
			case HEADING:
				enterOuterAlt(_localctx, 15);
				{
				setState(123);
				heading();
				}
				break;
			case RAW:
				enterOuterAlt(_localctx, 16);
				{
				setState(124);
				raw();
				}
				break;
			case LOCATE:
				enterOuterAlt(_localctx, 17);
				{
				setState(125);
				locate();
				}
				break;
			case BASFLG:
				enterOuterAlt(_localctx, 18);
				{
				setState(126);
				basflg();
				}
				break;
			case DATA:
				enterOuterAlt(_localctx, 19);
				{
				setState(127);
				data();
				}
				break;
			case RSTR:
				enterOuterAlt(_localctx, 20);
				{
				setState(128);
				rstr();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 21);
				{
				setState(129);
				read();
				}
				break;
			case TRON:
				enterOuterAlt(_localctx, 22);
				{
				setState(130);
				tron();
				}
				break;
			case TROFF:
				enterOuterAlt(_localctx, 23);
				{
				setState(131);
				troff();
				}
				break;
			case RESET:
				enterOuterAlt(_localctx, 24);
				{
				setState(132);
				reset_();
				}
				break;
			case SLEEP:
				enterOuterAlt(_localctx, 25);
				{
				setState(133);
				sleep();
				}
				break;
			case MACRUN:
				enterOuterAlt(_localctx, 26);
				{
				setState(134);
				macrun();
				}
				break;
			case MACKILL:
				enterOuterAlt(_localctx, 27);
				{
				setState(135);
				mackill();
				}
				break;
			case MACSTAT:
				enterOuterAlt(_localctx, 28);
				{
				setState(136);
				macstat();
				}
				break;
			case SYSVARNAME:
			case VARLETTER:
				enterOuterAlt(_localctx, 29);
				{
				setState(137);
				varassign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintstmtContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(OrbbasicParser.PRINT, 0); }
		public TerminalNode QMARK() { return getToken(OrbbasicParser.QMARK, 0); }
		public PrintlistContext printlist() {
			return getRuleContext(PrintlistContext.class,0);
		}
		public PrintstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).enterPrintstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).exitPrintstmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OrbbasicVisitor ) return ((OrbbasicVisitor<? extends T>)visitor).visitPrintstmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintstmtContext printstmt() throws RecognitionException {
		PrintstmtContext _localctx = new PrintstmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_printstmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_la = _input.LA(1);
			if ( !(_la==QMARK || _la==PRINT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(142);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(141);
				printlist();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintlistContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(OrbbasicParser.COMMA, 0); }
		public List<PrintlistContext> printlist() {
			return getRuleContexts(PrintlistContext.class);
		}
		public PrintlistContext printlist(int i) {
			return getRuleContext(PrintlistContext.class,i);
		}
		public PrintlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).enterPrintlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).exitPrintlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OrbbasicVisitor ) return ((OrbbasicVisitor<? extends T>)visitor).visitPrintlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintlistContext printlist() throws RecognitionException {
		PrintlistContext _localctx = new PrintlistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_printlist);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			expression();
			setState(146);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(145);
				match(COMMA);
				}
			}

			setState(151);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(148);
					printlist();
					}
					} 
				}
				setState(153);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalstmtContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(OrbbasicParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode THEN() { return getToken(OrbbasicParser.THEN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(OrbbasicParser.ELSE, 0); }
		public ConditionalstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).enterConditionalstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).exitConditionalstmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OrbbasicVisitor ) return ((OrbbasicVisitor<? extends T>)visitor).visitConditionalstmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalstmtContext conditionalstmt() throws RecognitionException {
		ConditionalstmtContext _localctx = new ConditionalstmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_conditionalstmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(IF);
			setState(155);
			expression();
			setState(156);
			match(THEN);
			setState(157);
			statement();
			setState(160);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(158);
				match(ELSE);
				setState(159);
				statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForstmtContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(OrbbasicParser.FOR, 0); }
		public VarassignContext varassign() {
			return getRuleContext(VarassignContext.class,0);
		}
		public TerminalNode TO() { return getToken(OrbbasicParser.TO, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode STEP() { return getToken(OrbbasicParser.STEP, 0); }
		public ForstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).enterForstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).exitForstmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OrbbasicVisitor ) return ((OrbbasicVisitor<? extends T>)visitor).visitForstmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForstmtContext forstmt() throws RecognitionException {
		ForstmtContext _localctx = new ForstmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_forstmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(FOR);
			setState(163);
			varassign();
			setState(164);
			match(TO);
			setState(165);
			expression();
			setState(168);
			_la = _input.LA(1);
			if (_la==STEP) {
				{
				setState(166);
				match(STEP);
				setState(167);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NextstmtContext extends ParserRuleContext {
		public TerminalNode NEXT() { return getToken(OrbbasicParser.NEXT, 0); }
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public NextstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nextstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).enterNextstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OrbbasicListener ) ((OrbbasicListener)listener).exitNextstmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OrbbasicVisitor ) return ((OrbbasicVisitor<? extends T>)visitor).visitNextstmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NextstmtContext nextstmt() throws RecognitionException {
		NextstmtContext _localctx = new NextstmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_nextstmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(NEXT);
			setState(172);
			_la = _input.LA(1);
			if (_la==SYSVARNAME || _la==VARLETTER) {
				{
				setState(171);
				vardecl();
				}
			}
